--- a/Ocean_deeplearning_13_08.ipynb
+++ b/Ocean_deeplearning_13_08.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ocean_deeplearning_13-08.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMn4kI4bfM8cHQlqFwDYJrv",
+      "authorship_tag": "ABX9TyOX2QZ4eqZDTiptvWKZ3iXI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,21 +34,59 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t9AXJAeTdTiP",
-        "outputId": "0d4bb3fb-9bb9-47e0-d648-08c0068a3ac1"
+        "outputId": "3723e81e-b56f-4705-97bf-95951d9ad3ab"
       },
       "source": [
-        "print(\"Hello, world\")"
+        "print(\"Hello, world\")\n",
+        "\n",
+        "#Declarar variável\n",
+        "numero = 20\n",
+        "print(numero)\n",
+        "\n",
+        "#Lista\n",
+        "lista = [10,20,30]\n",
+        "print(lista, type(lista), type(lista[2]))\n",
+        "\n",
+        "#Quantidade\n",
+        "print(len(lista))\n",
+        "\n",
+        "#Tupla\n",
+        "tupla = (5, 6, 7)\n",
+        "print(tupla, type(tupla))\n",
+        "\n",
+        "tupla2 = 5, 6, 7\n",
+        "print(tupla2, type(tupla2))\n",
+        "\n",
+        "elemento = tupla[0]\n",
+        "print(elemento)"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Hello, world\n"
+            "Hello, world\n",
+            "20\n",
+            "[10, 20, 30] <class 'list'> <class 'int'>\n",
+            "3\n",
+            "(5, 6, 7) <class 'tuple'>\n",
+            "(5, 6, 7) <class 'tuple'>\n",
+            "5\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ZN6KQXZiNWV"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
