--- a/Ocean_deeplearning_13_08.ipynb
+++ b/Ocean_deeplearning_13_08.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ocean_deeplearning_13-08.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOX2QZ4eqZDTiptvWKZ3iXI",
+      "authorship_tag": "ABX9TyPIPACc9D8OGXhTVbYf+h0P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,57 +30,67 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3ZN6KQXZiNWV"
+      },
+      "source": [
+        "#importando as bibliotecas\n",
+        "\n",
+        "from tensorflow import keras # Importa a biblioteca Keras\n",
+        "from keras.datasets import mnist # Base de Dados MNIST\n",
+        "from tensorflow.python.keras import Sequential # Arquitetura da nossa rede neural\n",
+        "from tensorflow.python.keras.layers import Dense, Dropout # Neurônio (base da rede) e Regularizador (evita overfitting)\n",
+        "from tensorflow.compat.v1.keras.optimizers import RMSprop # Otimizador (back propagation)"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jsNTvnywnJMy"
+      },
+      "source": [
+        "Carregar os dados"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "t9AXJAeTdTiP",
-        "outputId": "3723e81e-b56f-4705-97bf-95951d9ad3ab"
+        "id": "hC3iM1R5mhcT",
+        "outputId": "e4642e2e-fef2-4534-e5ea-e8bd54518edd"
       },
       "source": [
-        "print(\"Hello, world\")\n",
-        "\n",
-        "#Declarar variável\n",
-        "numero = 20\n",
-        "print(numero)\n",
-        "\n",
-        "#Lista\n",
-        "lista = [10,20,30]\n",
-        "print(lista, type(lista), type(lista[2]))\n",
-        "\n",
-        "#Quantidade\n",
-        "print(len(lista))\n",
-        "\n",
-        "#Tupla\n",
-        "tupla = (5, 6, 7)\n",
-        "print(tupla, type(tupla))\n",
-        "\n",
-        "tupla2 = 5, 6, 7\n",
-        "print(tupla2, type(tupla2))\n",
-        "\n",
-        "elemento = tupla[0]\n",
-        "print(elemento)"
+        "(x_treino, y_treino), (x_teste, y_teste) = mnist.load_data()"
       ],
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Hello, world\n",
-            "20\n",
-            "[10, 20, 30] <class 'list'> <class 'int'>\n",
-            "3\n",
-            "(5, 6, 7) <class 'tuple'>\n",
-            "(5, 6, 7) <class 'tuple'>\n",
-            "5\n"
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n",
+            "11501568/11490434 [==============================] - 0s 0us/step\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L0yLtcNVpke9"
+      },
+      "source": [
+        "Analisar Dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "3ZN6KQXZiNWV"
+        "id": "iKM5Gfpynic4"
       },
       "source": [
         ""
