--- a/Ocean_deeplearning_13_08.ipynb
+++ b/Ocean_deeplearning_13_08.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ocean_deeplearning_13-08.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbnnzPsC0z5dQKbd0JVRnW",
+      "authorship_tag": "ABX9TyPwFKPRRouLX10NRhrsf1U/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "from tensorflow.python.keras.layers import Dense, Dropout # Neurônio (base da rede) e Regularizador (evita overfitting)\n",
         "from tensorflow.compat.v1.keras.optimizers import RMSprop # Otimizador (back propagation)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "source": [
         "(x_treino, y_treino), (x_teste, y_teste) = mnist.load_data()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "\n",
         "print(primeira_imagem)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,12 +190,12 @@
         "outputId": "fdce1960-b7a2-460c-bf2c-d6c227dfd605"
       },
       "source": [
-        "import matplotlib.pyplot as plt\n",
+        "55555555555555555555555555555555555,llib.pyplot as plt\n",
         "indice = 12000\n",
         "print(\"A imagem representa: \", y_treino[indice])\n",
         "plt.imshow(x_treino[indice], cmap=plt.cm.binary)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,6 +228,103 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3CMcFKI-0fup"
+      },
+      "source": [
+        "\n",
+        "1.   Organizar camada de entraada\n",
+        "2.   Organizar a camada de saída\n",
+        "3.   Estruturar rede neural\n",
+        "4.   Treinar modelo\n",
+        "5.   Fazer previsões\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sPJYyKUy071Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "082dd631-9ce2-45e7-e776-49a61b5ed380"
+      },
+      "source": [
+        "#Achatando matriz de pixels e transformando em uma única lista\n",
+        "\n",
+        "quantidade_treino = len(x_treino) #60000\n",
+        "quantidade_teste = len(x_teste) #10000\n",
+        "\n",
+        "resolucao_imagem = x_treino[0].shape # (28,28)\n",
+        "resolucao_total = resolucao_imagem[0] * resolucao_imagem[1] # 28 * 28 = 784\n",
+        "\n",
+        "x_treino = x_treino.reshape(quantidade_treino, resolucao_total)\n",
+        "x_teste = x_teste.reshape(quantidade_teste, resolucao_total)\n",
+        "\n",
+        "print(\"Quantidade de itens em x_treino[0:\", len(x_treino))\n",
+        "\n",
+        "print(x_treino[0])"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Quantidade de itens em x_treino[0: 60000\n",
+            "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   3  18  18  18 126 136 175  26 166 255\n",
+            " 247 127   0   0   0   0   0   0   0   0   0   0   0   0  30  36  94 154\n",
+            " 170 253 253 253 253 253 225 172 253 242 195  64   0   0   0   0   0   0\n",
+            "   0   0   0   0   0  49 238 253 253 253 253 253 253 253 253 251  93  82\n",
+            "  82  56  39   0   0   0   0   0   0   0   0   0   0   0   0  18 219 253\n",
+            " 253 253 253 253 198 182 247 241   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0  80 156 107 253 253 205  11   0  43 154\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0  14   1 154 253  90   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0 139 253 190   2   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0  11 190 253  70   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  35 241\n",
+            " 225 160 108   1   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0  81 240 253 253 119  25   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0  45 186 253 253 150  27   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0  16  93 252 253 187\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0 249 253 249  64   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0  46 130 183 253\n",
+            " 253 207   2   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0  39 148 229 253 253 253 250 182   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0  24 114 221 253 253 253\n",
+            " 253 201  78   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0  23  66 213 253 253 253 253 198  81   2   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0  18 171 219 253 253 253 253 195\n",
+            "  80   9   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "  55 172 226 253 253 253 253 244 133  11   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0 136 253 253 253 212 135 132  16\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
