--- a/Ocean_deeplearning_13_08.ipynb
+++ b/Ocean_deeplearning_13_08.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ocean_deeplearning_13-08.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmf0ks6vPPl5vk9PAtOLwB",
+      "authorship_tag": "ABX9TyO2DRg5iKh/XgKjs1WXOBnW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,6 +391,82 @@
             "Valores únicos: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
             "y_treino[0] antes:  5\n",
             "y_treino[0] depois:  [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MSY0_Enx9jeP"
+      },
+      "source": [
+        "Modelo Rede Neural - Sequential"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rF-i89n79l9X",
+        "outputId": "fa9ba877-c63b-4138-d832-ce08c8e2fb23"
+      },
+      "source": [
+        "model = Sequential()\n",
+        "\n",
+        "#Primeiro hidden layer\n",
+        "#30 neurôniso\n",
+        "#função de ativação\n",
+        "#input shape \n",
+        "\n",
+        "model.add(Dense(30, activation='relu', input_shape=(resolucao_total,)))\n",
+        "\n",
+        "#Adicionar regularizador -> ajuda a evitar overfitting\n",
+        "model.add(Dropout(0.2))\n",
+        "\n",
+        "#Segundo hidden layer\n",
+        "#20 neurônios\n",
+        "#função de ativação: ReLU\n",
+        "\n",
+        "model.add(Dense(20, activation='relu'))\n",
+        "\n",
+        "#Mais um regularizador (entre primeira e segunda)\n",
+        "\n",
+        "model.add(Dropout(0.2))\n",
+        "\n",
+        "#Camada de saída\n",
+        "model.add(Dense(quantidade_valores_unicos, activation='softmax'))\n",
+        "\n",
+        "#Exibir resumo do modelo\n",
+        "\n",
+        "model.summary()"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense (Dense)                (None, 30)                23550     \n",
+            "_________________________________________________________________\n",
+            "dropout (Dropout)            (None, 30)                0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 20)                620       \n",
+            "_________________________________________________________________\n",
+            "dropout_1 (Dropout)          (None, 20)                0         \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 10)                210       \n",
+            "=================================================================\n",
+            "Total params: 24,380\n",
+            "Trainable params: 24,380\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
           ],
           "name": "stdout"
         }
