--- a/Ocean_deeplearning_13_08.ipynb
+++ b/Ocean_deeplearning_13_08.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ocean_deeplearning_13-08.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2DRg5iKh/XgKjs1WXOBnW",
+      "authorship_tag": "ABX9TyNF6J7EilHiK3eLzWTzTn1d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -467,6 +467,59 @@
             "Trainable params: 24,380\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fLWdbs7WBP5X",
+        "outputId": "aa4de721-036e-4cde-855c-588789278578"
+      },
+      "source": [
+        "#Compilar treino do modelo\n",
+        "#Definir função de erro\n",
+        "#Definir otimizador\n",
+        "#Definir métrica de aprendizado\n",
+        "\n",
+        "model.compile(loss='categorical_crossentropy', optimizer=RMSprop(), metrics=['accuracy'])\n",
+        "\n",
+        "#Treina o modelo\n",
+        "#imagens em treino, labels em treino\n",
+        "#imagens em testes, labels em teste\n",
+        "\n",
+        "history = model.fit(x_treino, y_treino, batch_size=128, epochs=10, verbose=1, validation_data=(x_teste, y_teste))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "469/469 [==============================] - 3s 3ms/step - loss: 2.0319 - accuracy: 0.3485 - val_loss: 1.5379 - val_accuracy: 0.5557\n",
+            "Epoch 2/10\n",
+            "469/469 [==============================] - 1s 3ms/step - loss: 1.3220 - accuracy: 0.5586 - val_loss: 0.9377 - val_accuracy: 0.7316\n",
+            "Epoch 3/10\n",
+            "469/469 [==============================] - 1s 3ms/step - loss: 1.0019 - accuracy: 0.6546 - val_loss: 0.7295 - val_accuracy: 0.7900\n",
+            "Epoch 4/10\n",
+            "469/469 [==============================] - 1s 3ms/step - loss: 0.8589 - accuracy: 0.7113 - val_loss: 0.6121 - val_accuracy: 0.8298\n",
+            "Epoch 5/10\n",
+            "469/469 [==============================] - 2s 3ms/step - loss: 0.7531 - accuracy: 0.7538 - val_loss: 0.5237 - val_accuracy: 0.8574\n",
+            "Epoch 6/10\n",
+            "469/469 [==============================] - 2s 3ms/step - loss: 0.6814 - accuracy: 0.7837 - val_loss: 0.4642 - val_accuracy: 0.8768\n",
+            "Epoch 7/10\n",
+            "469/469 [==============================] - 2s 3ms/step - loss: 0.6245 - accuracy: 0.8055 - val_loss: 0.4176 - val_accuracy: 0.8879\n",
+            "Epoch 8/10\n",
+            "469/469 [==============================] - 1s 3ms/step - loss: 0.5787 - accuracy: 0.8221 - val_loss: 0.3840 - val_accuracy: 0.8959\n",
+            "Epoch 9/10\n",
+            "469/469 [==============================] - 2s 3ms/step - loss: 0.5443 - accuracy: 0.8339 - val_loss: 0.3631 - val_accuracy: 0.8993\n",
+            "Epoch 10/10\n",
+            "469/469 [==============================] - 2s 4ms/step - loss: 0.5178 - accuracy: 0.8429 - val_loss: 0.3430 - val_accuracy: 0.9043\n"
           ],
           "name": "stdout"
         }
